[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vehicle Dynamics Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3
